package io.github.ghackenberg.mbse.transport.core;

public interface Exporter {

	public void export(Model model, Statistics statistics);
	
}
