classDiagram
    direction LR
    
    class model
    class parser
    class controller
    class simulator
    class statistics
    class viewer
    class program
    class exporter

    <<Module>> model
    <<Module>> parser
    <<Module>> controller
    <<Module>> simulator
    <<Module>> statistics
    <<Module>> viewer
    <<Module>> program
    <<Module>> exporter

    parser ..> model
    controller ..> model
    statistics ..> model
    viewer ..> simulator
    simulator ..> controller
    simulator ..> statistics
    program ..> parser
    program ..> viewer
    program ..> exporter
    exporter ..> statistics